0.2.12 (2009-09-06)
* Fixed geocoder_us [Aubrey Holland]

0.2.11 (2009-07-15)
* Add new MapQuest geocoder [Aubrey Holland]

0.2.10 (2009-04-17)
* Added #blank? to Location

0.2.9 (2009-04-14)
* Remove retired MapQuest geocoder
* Slightly more aggressive error handling for Geocoder.us
* Extend Numeric with #to_radians and #to_degrees

0.2.8 (2008-10-03)
* fixed missing files from gem

0.2.7 (2008-10-03)
* Adding Multimap geocoder [Tom Taylor]
* Added MapQuest geocoder [Andrew Selder]
* Fix google geocoder for responses that only return coordinates [Andrew Selder]

0.2.5
* fixed address mapping for local search maps (again)

0.2.4 (2007-05-15)
* fixed address mapping for local search maps (Tom Taylor)

0.2.3 (2007-04-27)
* fixed Google for less precise queries
* added User-Agent to coerce Google into returning UTF-8 (Jonathan Tron)

0.2.2 (2007-03-27)
* fixed LocalSearchMaps

0.2.1 (2007-03-19)
* fixed error in command line interface

0.2.0 (2007-03-17)
* changed city to locality, state to region, and zip to postal_code
* added support for PostcodeAnywhere
* added support for Local Search Maps (James Stewart)
* added IP-based geocoder
* moved geocoders to Graticule::Geocoder namespace
* fixed Google geocoder (again)
* made Yahoo geocoder consistent with others by returning 1 result
* geocoders can how take a Hash (:street, :locality, :region, :postal_code, :country)
  or a Graticule::Location for the #locate call

0.1.3 (2007-02-14)
* fixed Google geocoder
* fixed CLI

0.1.2 (2007-02-12)
* added "geocode" executable. See "geocode --help" for more information
* declared dependency on ActiveSupport

0.1.1 (2006-12-16)
* fixed bug in Yahoo that raised error when street address not returned
* migrated to Hoe (http://seattlerb.rubyforge.org/hoe/)
* added Haversine, Spherical and Vincenty distance calculations

0.1 (2006-10-31)
* Initial release