@@ -18,6 +18,7 @@ require 'graticule/geocoder/geocoder_us'
 require 'graticule/geocoder/local_search_maps'
 require 'graticule/geocoder/meta_carta'
 require 'graticule/geocoder/postcode_anywhere'
+require 'graticule/geocoder/freethepostcode'
 require 'graticule/geocoder/multimap'
 require 'graticule/geocoder/mapquest'
 require 'graticule/distance'
